--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
-"<div style='border: 5px dotted green; padding:20px'>
+<div style='border: 5px dotted green; padding:20px'>
   <h1> My name is <%=@cat_name%>! </h1>
   <img src='https://i.imgur.com/jFaSxym.png'>
-  </div>"
+</div>
