--- a/views/index.erb
+++ b/views/index.erb
@@ -1,8 +1,15 @@
+
+<% if @cat_name %>
+<h1> My name is <%=@cat_name%>! </h1>
+
+<% else %>
+<form action="/named-cat">
+  <input type="text" name="name">
+  <input type="submit" value="Submit">
+</form>
+<% end %>
+
 <div style='border: 5px dotted green; padding:20px'>
-  <h1> My name is <%=@cat_name%>! </h1>
-  <form action="/named-cat">
-    <input type="text" name="name">
-    <input type="submit" value="Submit">
-  </form>
   <img src='https://i.imgur.com/jFaSxym.png'>
 </div>
+
