--- a/views/index.erb
+++ b/views/index.erb
@@ -5,11 +5,12 @@
 <% else %>
 <form action="/named-cat">
   <input type="text" name="name">
-  <input type="submit" value="Submit">
+  <input type="submit" value="Name that cat">
+  <input type="date">
 </form>
 <% end %>
 
-<div style='border: 5px dotted green; padding:20px'>
+<div style='border: 5px dotted pink; padding:20px'>
   <img src='https://i.imgur.com/jFaSxym.png'>
 </div>
 
